2010-09-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-retrieve-group-data-early): Fix typo in the
	non-streaming case.

	* gnus-art.el (gnus-flush-original-article-buffer): Separated out.
	(gnus-article-encrypt-body): Use it.

	* gnus-sum.el (gnus-summary-show-complete-article): New command and
	keystroke.

	* nnimap.el (nnimap-find-wanted-parts-1): Use
	gnus-fetch-partial-articles.

	* gnus-art.el (gnus-fetch-partial-articles): New variable.

	* nnimap.el (nnimap-insert-partial-structure): New function.
	(nnimap-get-partial-article): New function.
	(nnimap-request-article): Use it.
	(nnimap-wait-for-response): Return whether the wait was successful.
	(nnimap-finish-retrieve-group-infos): Don't do anything if the
	retrieval wasn't successful.
	(nnimap-retrieve-group-data-early): Allow throttling servers.
	(nnimap-streaming): New variable.
	(nnimap-fetch-partial-articles): Removed.

	* mm-decode.el (mm-with-part): Protect against killed buffers.

	* nndraft.el (nndraft-retrieve-headers): Insert Lines and Chars headers
	for prettier summary display.

2010-09-25  Andrew Cohen  <cohen@andy.bu.edu>  (tiny change)

	* nnir.el (nnir-run-imap): Allow sending IMAP search patterns
	directly.

2010-09-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.el (gnus-local-domain): Put gnus-local-domain back again, since
	apparently third-party libraries depend on it.

	* nnimap.el (nnimap-open-connection): Wait for the response to STARTTLS
	before starting negotiation.

	* gnus-art.el (gnus-treat-from-gravatar): Change default to nil for
	privacy reasons.
	(gnus-treat-mail-gravatar): Ditto.

	* gnus-ems.el (gnus-put-image): Don't put any non-blank text into the
	buffer when inserting images.  Inserting text into the headers, for
	instance, can make them invalid.

2010-09-25  Julien Danjou  <julien@danjou.info>

	* rfc1843.el: Remove useless rfc1843-old-gnus-decode-header-function
	variables.
